--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,9 +1,10 @@
 footer {
     background-color: white;
     height: 60px;
-    border-top: 1px #CCCCCC;
-    position: absolute;
+    border-top: 1px solid #CCCCCC;
+    position: fixed;
     bottom:0;
-    text-align: center;
     line-height: 60px;
+    text-align: center;
+    width: 100%;
 }
