--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,5 +2,13 @@ header {
     background-color:white;
     height: 70px;
     width: 100%;
-    border-bottom: 1px #CCCCCC;
+    border-bottom: 1px solid #CCCCCC;
+}
+
+.logo {
+    background-image: url('../images/logo.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100px;
+    height: 100px;
 }
